--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,3 +12,62 @@ Pastel: #D6D58E
 
 */
 
+/* 
+
+Typical Device Breakpoints
+
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+
+*/
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+html, body {
+    background-color: #005C53;
+    width: 100vw;
+    height: 100vh;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.438);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
+}
+
+#imagem {
+    display: block;
+    background: #005C53 url('../imagens/pexels-pixabay-248921.jpg') no-repeat bottom center;
+    background-size: cover;
+    height: 200px;
+}
+
+#formulario {
+    display: block;
+    padding: 10px;
+}
