--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,11 +8,7 @@ Azul Escuro: #042940
 Azul + claro: #005C53
 Verde: #9FC131
 Amarelo: #DBF227
-Pastel: #D6D58E
-
-*/
-
-/* 
+Pastel: #D6D58E 
 
 Typical Device Breakpoints
 
@@ -51,7 +47,7 @@ main {
     overflow: hidden;
 
     background-color: white;
-    width: 250px;
+    width: 255px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.438);
@@ -70,4 +66,13 @@ main {
 #formulario {
     display: block;
     padding: 10px;
+}
+
+#formulario h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#formulario p {
+    font-size: 0.8em;
 }
