--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -19,6 +19,7 @@ Grandes telas: acima de 1200px
 
     #login {
         width: 80vw;
+        height: 280px;
     }
 
     #imagem {
@@ -41,6 +42,7 @@ Grandes telas: acima de 1200px
     
     #login {
         width: 950px;
+        height: 340px;
     }
 
     #imagem {
@@ -59,7 +61,8 @@ Grandes telas: acima de 1200px
     }
 
     #formulario p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
 
