--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,7 +43,6 @@ main {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: white;
@@ -52,6 +51,7 @@ main {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.438);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -78,16 +78,39 @@ main {
 }
 
 form > .campo {
-    background-color:  #005C53;
+    background-color: #005C53;
+    border: 2px solid #005C53;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 } 
 
 .campo > label {
     display: none;
+}
+
+.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+.campo > input {
+    background-color: #c4c3af;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-13px);
+}
+
+.campo > input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit] {
